--- a/environment.yml
+++ b/environment.yml
@@ -9,3 +9,13 @@ dependencies:
   - scikit-learn
   - statsmodels
   - jupyter_latex_envs
+  - texlive-core
+  - latexcodec
+  - random
+  - mpld3
+  - torchvision
+  - pytorch-cpu
+  - keras
+  - seaborn 
+  - copy
+  - scvkit
